// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders Default without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-vertical-bar rcx-css-yefw2m"
    >
      <span
        data-focus-scope-start="true"
        hidden=""
      />
      <div
        style="position: relative; user-select: auto; width: 380px; height: 100%; max-width: 50%; min-width: 380px; min-height: 100%; box-sizing: border-box; flex-shrink: 0;"
      >
        <div
          aria-labelledby="contextualbarTitle"
          class="rcx-box rcx-box--full rcx-vertical-bar rcx-css-ohm8rb"
          role="dialog"
          tabindex="-1"
        >
          <div
            class="rcx-box rcx-box--full rcx-css-142wtci"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-1bdyjik rcx-css-1l4fxfb"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-members rcx-icon rcx-css-1yal9it"
              >
                
              </i>
              <h5
                class="rcx-box rcx-box--full rcx-css-1spko5i"
                id="contextualbarTitle"
              >
                Members
              </h5>
            </div>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-vertical-bar__section rcx-css-16mbly4"
          >
            <label
              class="rcx-box rcx-box--full rcx-label rcx-box rcx-box--full rcx-box--animated rcx-input-box__wrapper"
            >
              <input
                aria-controls="_r_1i_"
                aria-label="Search_by_username"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--undecorated rcx-input-box--type-text rcx-input-box"
                placeholder="Search_by_username"
                size="1"
                type="text"
                value="filter"
              />
              <span
                class="rcx-box rcx-box--full rcx-input-box__addon"
              >
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-magnifier rcx-icon rcx-css-4pvxx3"
                >
                  
                </i>
              </span>
            </label>
            <div
              class="rcx-box rcx-box--full rcx-css-l1qvi5"
            >
              <div
                class="rcx-box rcx-box--full rcx-css-1mbgoc8"
              >
                <div
                  aria-hidden="true"
                  data-a11y-ignore="aria-hidden-focus"
                  data-react-aria-prevent-focus="true"
                  data-testid="hidden-select-container"
                  style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
                >
                  <label>
                    <select
                      tabindex="-1"
                    >
                      <option />
                      <option
                        value="online"
                      >
                        online
                      </option>
                      <option
                        value="all"
                      >
                        all
                      </option>
                    </select>
                  </label>
                </div>
              </div>
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-labelledby="react-aria-_r_1r_"
                class="rcx-box rcx-box--full rcx-select rcx-css-1vw6rc6"
                type="button"
              >
                <span
                  class="rcx-box rcx-box--full rcx-css-e3nij6"
                  id="react-aria-_r_1r_"
                >
                  Online
                </span>
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-chevron-down rcx-icon rcx-css-1wz6xj9"
                >
                  
                </i>
              </button>
            </div>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-vertical-bar__content rcx-css-1w66n2o"
          >
            <div
              role="status"
              style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              __count__result_found
            </div>
            <div
              class="rcx-box rcx-box--full rcx-css-nyqak3"
            >
              <span
                class="rcx-box rcx-box--full rcx-css-1848tdm"
              >
                Showing_current_of_total
              </span>
            </div>
            <div
              class="rcx-box rcx-box--full rcx-css-4k230l"
              id="_r_1i_"
            >
              <div>
                <ul
                  aria-label="Members"
                  data-buffer-size="50"
                  data-keep-mounted="0"
                  data-testid="room-members-virtual-list"
                  role="listbox"
                  style="margin: 0px; padding: 0px; list-style: none; height: 100%;"
                >
                  <li
                    role="none"
                    style="list-style: none; z-index: 1; position: sticky; top: 0px;"
                  >
                    <div>
                      <div
                        class="rcx-box rcx-box--full rcx-css-sah935"
                      >
                        <div
                          class="rcx-box rcx-box--full"
                        >
                          Members
                        </div>
                        <div
                          class="rcx-box rcx-box--full"
                        >
                          1
                        </div>
                      </div>
                    </div>
                  </li>
                  <li
                    role="none"
                    style="list-style: none;"
                  >
                    <div>
                      <div
                        aria-disabled="false"
                        aria-selected="false"
                        class="rcx-option"
                        data-userid="rocket.cat"
                        data-username="rocket.cat"
                        role="option"
                        style="padding-inline: 24px;"
                      >
                        <div
                          class="rcx-option__wrapper"
                        >
                          <div
                            class="rcx-option__avatar"
                          >
                            <figure
                              class="rcx-box rcx-box--full rcx-avatar rcx-avatar--x28"
                            >
                              <img
                                alt="Avatar"
                                aria-hidden="true"
                                class="rcx-avatar__element rcx-avatar__element--x28"
                                data-username="rocket.cat"
                                src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQYV2Oora39DwAFaQJ3y3rKeAAAAABJRU5ErkJggg=="
                                title="rocket.cat"
                              />
                            </figure>
                          </div>
                          <div
                            class="rcx-option__column"
                          >
                            <svg
                              aria-hidden="true"
                              class="rcx-status-bullet rcx-status-bullet--loading undefined "
                              fill="none"
                              height="12"
                              title="Loading"
                              viewBox="0 0 12 12"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <circle
                                class="rcx-status-bullet rcx-status-bullet--loading"
                                cx="6"
                                cy="6"
                                r="5"
                                stroke-dasharray="2 2"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                          <div
                            class="rcx-option__content"
                            data-qa="MemberItem-rocket.cat"
                          >
                            rocket.cat
                          </div>
                          <div
                            class="rcx-box--animated rcx-option__menu-wrapper"
                          >
                            <button
                              aria-hidden="true"
                              class="rcx-box rcx-box--full rcx-button--tiny-square rcx-button--square rcx-button--icon rcx-button"
                              tabindex="-1"
                              type="button"
                            >
                              <i
                                aria-hidden="true"
                                class="rcx-box rcx-box--full rcx-icon--name-kebab rcx-icon rcx-css-1g87xs3"
                              >
                                
                              </i>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            style="position: absolute; user-select: none; width: 100%; height: 10px; top: -5px; left: 0px; cursor: row-resize;"
          />
          <div
            style="position: absolute; user-select: none; width: 10px; height: 100%; top: 0px; cursor: col-resize; right: -5px;"
          />
          <div
            style="position: absolute; user-select: none; width: 100%; height: 10px; left: 0px; cursor: row-resize; bottom: -5px;"
          />
          <div
            style="position: absolute; user-select: none; width: 3px; height: 100%; top: 0px; left: 0px; cursor: col-resize; z-index: 99;"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-r98g7d"
            />
          </div>
          <div
            style="position: absolute; user-select: none; width: 20px; height: 20px; z-index: 1; right: -10px; top: -10px; cursor: ne-resize;"
          />
          <div
            style="position: absolute; user-select: none; width: 20px; height: 20px; z-index: 1; right: -10px; bottom: -10px; cursor: se-resize;"
          />
          <div
            style="position: absolute; user-select: none; width: 20px; height: 20px; z-index: 1; left: -10px; bottom: -10px; cursor: sw-resize;"
          />
          <div
            style="position: absolute; user-select: none; width: 20px; height: 20px; z-index: 1; left: -10px; top: -10px; cursor: nw-resize;"
          />
        </div>
      </div>
      <span
        data-focus-scope-end="true"
        hidden=""
      />
    </div>
  </div>
</body>
`;

exports[`renders Empty without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-vertical-bar rcx-css-yefw2m"
    >
      <span
        data-focus-scope-start="true"
        hidden=""
      />
      <div
        style="position: relative; user-select: auto; width: 380px; height: 100%; max-width: 50%; min-width: 380px; min-height: 100%; box-sizing: border-box; flex-shrink: 0;"
      >
        <div
          aria-labelledby="contextualbarTitle"
          class="rcx-box rcx-box--full rcx-vertical-bar rcx-css-ohm8rb"
          role="dialog"
          tabindex="-1"
        >
          <div
            class="rcx-box rcx-box--full rcx-css-142wtci"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-1bdyjik rcx-css-1l4fxfb"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-members rcx-icon rcx-css-1yal9it"
              >
                
              </i>
              <h5
                class="rcx-box rcx-box--full rcx-css-1spko5i"
                id="contextualbarTitle"
              >
                Members
              </h5>
            </div>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-vertical-bar__section rcx-css-16mbly4"
          >
            <label
              class="rcx-box rcx-box--full rcx-label rcx-box rcx-box--full rcx-box--animated rcx-input-box__wrapper"
            >
              <input
                aria-controls="_r_1s_"
                aria-label="Search_by_username"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--undecorated rcx-input-box--type-text rcx-input-box"
                placeholder="Search_by_username"
                size="1"
                type="text"
                value="filter"
              />
              <span
                class="rcx-box rcx-box--full rcx-input-box__addon"
              >
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-magnifier rcx-icon rcx-css-4pvxx3"
                >
                  
                </i>
              </span>
            </label>
            <div
              class="rcx-box rcx-box--full rcx-css-l1qvi5"
            >
              <div
                class="rcx-box rcx-box--full rcx-css-1mbgoc8"
              >
                <div
                  aria-hidden="true"
                  data-a11y-ignore="aria-hidden-focus"
                  data-react-aria-prevent-focus="true"
                  data-testid="hidden-select-container"
                  style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
                >
                  <label>
                    <select
                      tabindex="-1"
                    >
                      <option />
                      <option
                        value="online"
                      >
                        online
                      </option>
                      <option
                        value="all"
                      >
                        all
                      </option>
                    </select>
                  </label>
                </div>
              </div>
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-labelledby="react-aria-_r_25_"
                class="rcx-box rcx-box--full rcx-select rcx-css-1vw6rc6"
                type="button"
              >
                <span
                  class="rcx-box rcx-box--full rcx-css-e3nij6"
                  id="react-aria-_r_25_"
                >
                  Online
                </span>
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-chevron-down rcx-icon rcx-css-1wz6xj9"
                >
                  
                </i>
              </button>
            </div>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-vertical-bar__content rcx-css-1w66n2o"
          >
            <div
              role="status"
              style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              No_results_found
            </div>
            <div
              class="rcx-box rcx-box--full rcx-css-4k230l"
              id="_r_1s_"
            >
              <div
                class="rcx-box rcx-box--full rcx-vertical-bar__content rcx-css-r8c38r"
              >
                <div
                  class="rcx-states"
                >
                  <i
                    aria-hidden="true"
                    class="rcx-box rcx-box--full rcx-states__icon rcx-icon--name-magnifier rcx-icon rcx-css-d884y5"
                  >
                    
                  </i>
                  <h3
                    class="rcx-states__title"
                  >
                    No_members_found
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            style="position: absolute; user-select: none; width: 100%; height: 10px; top: -5px; left: 0px; cursor: row-resize;"
          />
          <div
            style="position: absolute; user-select: none; width: 10px; height: 100%; top: 0px; cursor: col-resize; right: -5px;"
          />
          <div
            style="position: absolute; user-select: none; width: 100%; height: 10px; left: 0px; cursor: row-resize; bottom: -5px;"
          />
          <div
            style="position: absolute; user-select: none; width: 3px; height: 100%; top: 0px; left: 0px; cursor: col-resize; z-index: 99;"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-r98g7d"
            />
          </div>
          <div
            style="position: absolute; user-select: none; width: 20px; height: 20px; z-index: 1; right: -10px; top: -10px; cursor: ne-resize;"
          />
          <div
            style="position: absolute; user-select: none; width: 20px; height: 20px; z-index: 1; right: -10px; bottom: -10px; cursor: se-resize;"
          />
          <div
            style="position: absolute; user-select: none; width: 20px; height: 20px; z-index: 1; left: -10px; bottom: -10px; cursor: sw-resize;"
          />
          <div
            style="position: absolute; user-select: none; width: 20px; height: 20px; z-index: 1; left: -10px; top: -10px; cursor: nw-resize;"
          />
        </div>
      </div>
      <span
        data-focus-scope-end="true"
        hidden=""
      />
    </div>
  </div>
</body>
`;

exports[`renders Loading without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-vertical-bar rcx-css-yefw2m"
    >
      <span
        data-focus-scope-start="true"
        hidden=""
      />
      <div
        style="position: relative; user-select: auto; width: 380px; height: 100%; max-width: 50%; min-width: 380px; min-height: 100%; box-sizing: border-box; flex-shrink: 0;"
      >
        <div
          aria-labelledby="contextualbarTitle"
          class="rcx-box rcx-box--full rcx-vertical-bar rcx-css-ohm8rb"
          role="dialog"
          tabindex="-1"
        >
          <div
            class="rcx-box rcx-box--full rcx-css-142wtci"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-1bdyjik rcx-css-1l4fxfb"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-members rcx-icon rcx-css-1yal9it"
              >
                
              </i>
              <h5
                class="rcx-box rcx-box--full rcx-css-1spko5i"
                id="contextualbarTitle"
              >
                Members
              </h5>
            </div>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-vertical-bar__section rcx-css-16mbly4"
          >
            <label
              class="rcx-box rcx-box--full rcx-label rcx-box rcx-box--full rcx-box--animated rcx-input-box__wrapper"
            >
              <input
                aria-label="Search_by_username"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--undecorated rcx-input-box--type-text rcx-input-box"
                placeholder="Search_by_username"
                size="1"
                type="text"
                value="filter"
              />
              <span
                class="rcx-box rcx-box--full rcx-input-box__addon"
              >
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-magnifier rcx-icon rcx-css-4pvxx3"
                >
                  
                </i>
              </span>
            </label>
            <div
              class="rcx-box rcx-box--full rcx-css-l1qvi5"
            >
              <div
                class="rcx-box rcx-box--full rcx-css-1mbgoc8"
              >
                <div
                  aria-hidden="true"
                  data-a11y-ignore="aria-hidden-focus"
                  data-react-aria-prevent-focus="true"
                  data-testid="hidden-select-container"
                  style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
                >
                  <label>
                    <select
                      tabindex="-1"
                    >
                      <option />
                      <option
                        value="online"
                      >
                        online
                      </option>
                      <option
                        value="all"
                      >
                        all
                      </option>
                    </select>
                  </label>
                </div>
              </div>
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-labelledby="react-aria-_r_2f_"
                class="rcx-box rcx-box--full rcx-select rcx-css-1vw6rc6"
                type="button"
              >
                <span
                  class="rcx-box rcx-box--full rcx-css-e3nij6"
                  id="react-aria-_r_2f_"
                >
                  Online
                </span>
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-chevron-down rcx-icon rcx-css-1wz6xj9"
                >
                  
                </i>
              </button>
            </div>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-vertical-bar__content rcx-css-1w66n2o"
          >
            <div
              role="status"
              style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            />
            <div
              class="rcx-box rcx-box--full rcx-css-nyqak3"
            >
              <div
                class="rcx-box rcx-box--full rcx-throbber"
              >
                <span
                  class="rcx-box rcx-box--full rcx-throbber__circle rcx-css-1xtde58 rcx-css-10wc9to"
                />
                <span
                  class="rcx-box rcx-box--full rcx-throbber__circle rcx-css-1mkyloh rcx-css-10wc9to"
                />
                <span
                  class="rcx-box rcx-box--full rcx-throbber__circle rcx-css-1r9rmv6 rcx-css-10wc9to"
                />
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            style="position: absolute; user-select: none; width: 100%; height: 10px; top: -5px; left: 0px; cursor: row-resize;"
          />
          <div
            style="position: absolute; user-select: none; width: 10px; height: 100%; top: 0px; cursor: col-resize; right: -5px;"
          />
          <div
            style="position: absolute; user-select: none; width: 100%; height: 10px; left: 0px; cursor: row-resize; bottom: -5px;"
          />
          <div
            style="position: absolute; user-select: none; width: 3px; height: 100%; top: 0px; left: 0px; cursor: col-resize; z-index: 99;"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-r98g7d"
            />
          </div>
          <div
            style="position: absolute; user-select: none; width: 20px; height: 20px; z-index: 1; right: -10px; top: -10px; cursor: ne-resize;"
          />
          <div
            style="position: absolute; user-select: none; width: 20px; height: 20px; z-index: 1; right: -10px; bottom: -10px; cursor: se-resize;"
          />
          <div
            style="position: absolute; user-select: none; width: 20px; height: 20px; z-index: 1; left: -10px; bottom: -10px; cursor: sw-resize;"
          />
          <div
            style="position: absolute; user-select: none; width: 20px; height: 20px; z-index: 1; left: -10px; top: -10px; cursor: nw-resize;"
          />
        </div>
      </div>
      <span
        data-focus-scope-end="true"
        hidden=""
      />
    </div>
  </div>
</body>
`;

exports[`renders WithABACRoom without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-vertical-bar rcx-css-yefw2m"
    >
      <span
        data-focus-scope-start="true"
        hidden=""
      />
      <div
        style="position: relative; user-select: auto; width: 380px; height: 100%; max-width: 50%; min-width: 380px; min-height: 100%; box-sizing: border-box; flex-shrink: 0;"
      >
        <div
          aria-labelledby="contextualbarTitle"
          class="rcx-box rcx-box--full rcx-vertical-bar rcx-css-ohm8rb"
          role="dialog"
          tabindex="-1"
        >
          <div
            class="rcx-box rcx-box--full rcx-css-142wtci"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-1bdyjik rcx-css-1l4fxfb"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-members rcx-icon rcx-css-1yal9it"
              >
                
              </i>
              <h5
                class="rcx-box rcx-box--full rcx-css-1spko5i"
                id="contextualbarTitle"
              >
                Members
              </h5>
            </div>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-vertical-bar__section rcx-css-16mbly4"
          >
            <label
              class="rcx-box rcx-box--full rcx-label rcx-box rcx-box--full rcx-box--animated rcx-input-box__wrapper"
            >
              <input
                aria-controls="_r_2g_"
                aria-label="Search_by_username"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--undecorated rcx-input-box--type-text rcx-input-box"
                placeholder="Search_by_username"
                size="1"
                type="text"
                value="filter"
              />
              <span
                class="rcx-box rcx-box--full rcx-input-box__addon"
              >
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-magnifier rcx-icon rcx-css-4pvxx3"
                >
                  
                </i>
              </span>
            </label>
            <div
              class="rcx-box rcx-box--full rcx-css-l1qvi5"
            >
              <div
                class="rcx-box rcx-box--full rcx-css-1mbgoc8"
              >
                <div
                  aria-hidden="true"
                  data-a11y-ignore="aria-hidden-focus"
                  data-react-aria-prevent-focus="true"
                  data-testid="hidden-select-container"
                  style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
                >
                  <label>
                    <select
                      tabindex="-1"
                    >
                      <option />
                      <option
                        value="online"
                      >
                        online
                      </option>
                      <option
                        value="all"
                      >
                        all
                      </option>
                    </select>
                  </label>
                </div>
              </div>
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-labelledby="react-aria-_r_2p_"
                class="rcx-box rcx-box--full rcx-select rcx-css-1vw6rc6"
                type="button"
              >
                <span
                  class="rcx-box rcx-box--full rcx-css-e3nij6"
                  id="react-aria-_r_2p_"
                >
                  Online
                </span>
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-chevron-down rcx-icon rcx-css-1wz6xj9"
                >
                  
                </i>
              </button>
            </div>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-vertical-bar__content rcx-css-1w66n2o"
          >
            <div
              role="status"
              style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              __count__result_found
            </div>
            <div
              class="rcx-box rcx-box--full rcx-css-nyqak3"
            >
              <span
                class="rcx-box rcx-box--full rcx-css-1848tdm"
              >
                Showing_current_of_total
              </span>
            </div>
            <div
              class="rcx-box rcx-box--full rcx-css-4k230l"
              id="_r_2g_"
            >
              <div>
                <ul
                  aria-label="Members"
                  data-buffer-size="50"
                  data-keep-mounted="0"
                  data-testid="room-members-virtual-list"
                  role="listbox"
                  style="margin: 0px; padding: 0px; list-style: none; height: 100%;"
                >
                  <li
                    role="none"
                    style="list-style: none; z-index: 1; position: sticky; top: 0px;"
                  >
                    <div>
                      <div
                        class="rcx-box rcx-box--full rcx-css-sah935"
                      >
                        <div
                          class="rcx-box rcx-box--full"
                        >
                          Members
                        </div>
                        <div
                          class="rcx-box rcx-box--full"
                        >
                          1
                        </div>
                      </div>
                    </div>
                  </li>
                  <li
                    role="none"
                    style="list-style: none;"
                  >
                    <div>
                      <div
                        aria-disabled="false"
                        aria-selected="false"
                        class="rcx-option"
                        data-userid="rocket.cat"
                        data-username="rocket.cat"
                        role="option"
                        style="padding-inline: 24px;"
                      >
                        <div
                          class="rcx-option__wrapper"
                        >
                          <div
                            class="rcx-option__avatar"
                          >
                            <figure
                              class="rcx-box rcx-box--full rcx-avatar rcx-avatar--x28"
                            >
                              <img
                                alt="Avatar"
                                aria-hidden="true"
                                class="rcx-avatar__element rcx-avatar__element--x28"
                                data-username="rocket.cat"
                                src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQYV2Oora39DwAFaQJ3y3rKeAAAAABJRU5ErkJggg=="
                                title="rocket.cat"
                              />
                            </figure>
                          </div>
                          <div
                            class="rcx-option__column"
                          >
                            <svg
                              aria-hidden="true"
                              class="rcx-status-bullet rcx-status-bullet--loading undefined "
                              fill="none"
                              height="12"
                              title="Loading"
                              viewBox="0 0 12 12"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <circle
                                class="rcx-status-bullet rcx-status-bullet--loading"
                                cx="6"
                                cy="6"
                                r="5"
                                stroke-dasharray="2 2"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                          <div
                            class="rcx-option__content"
                            data-qa="MemberItem-rocket.cat"
                          >
                            rocket.cat
                          </div>
                          <div
                            class="rcx-box--animated rcx-option__menu-wrapper"
                          >
                            <button
                              aria-hidden="true"
                              class="rcx-box rcx-box--full rcx-button--tiny-square rcx-button--square rcx-button--icon rcx-button"
                              tabindex="-1"
                              type="button"
                            >
                              <i
                                aria-hidden="true"
                                class="rcx-box rcx-box--full rcx-icon--name-kebab rcx-icon rcx-css-1g87xs3"
                              >
                                
                              </i>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            style="position: absolute; user-select: none; width: 100%; height: 10px; top: -5px; left: 0px; cursor: row-resize;"
          />
          <div
            style="position: absolute; user-select: none; width: 10px; height: 100%; top: 0px; cursor: col-resize; right: -5px;"
          />
          <div
            style="position: absolute; user-select: none; width: 100%; height: 10px; left: 0px; cursor: row-resize; bottom: -5px;"
          />
          <div
            style="position: absolute; user-select: none; width: 3px; height: 100%; top: 0px; left: 0px; cursor: col-resize; z-index: 99;"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-r98g7d"
            />
          </div>
          <div
            style="position: absolute; user-select: none; width: 20px; height: 20px; z-index: 1; right: -10px; top: -10px; cursor: ne-resize;"
          />
          <div
            style="position: absolute; user-select: none; width: 20px; height: 20px; z-index: 1; right: -10px; bottom: -10px; cursor: se-resize;"
          />
          <div
            style="position: absolute; user-select: none; width: 20px; height: 20px; z-index: 1; left: -10px; bottom: -10px; cursor: sw-resize;"
          />
          <div
            style="position: absolute; user-select: none; width: 20px; height: 20px; z-index: 1; left: -10px; top: -10px; cursor: nw-resize;"
          />
        </div>
      </div>
      <span
        data-focus-scope-end="true"
        hidden=""
      />
    </div>
  </div>
</body>
`;

exports[`renders WithInvitedMember without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-vertical-bar rcx-css-yefw2m"
    >
      <span
        data-focus-scope-start="true"
        hidden=""
      />
      <div
        style="position: relative; user-select: auto; width: 380px; height: 100%; max-width: 50%; min-width: 380px; min-height: 100%; box-sizing: border-box; flex-shrink: 0;"
      >
        <div
          aria-labelledby="contextualbarTitle"
          class="rcx-box rcx-box--full rcx-vertical-bar rcx-css-ohm8rb"
          role="dialog"
          tabindex="-1"
        >
          <div
            class="rcx-box rcx-box--full rcx-css-142wtci"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-1bdyjik rcx-css-1l4fxfb"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-members rcx-icon rcx-css-1yal9it"
              >
                
              </i>
              <h5
                class="rcx-box rcx-box--full rcx-css-1spko5i"
                id="contextualbarTitle"
              >
                Members
              </h5>
            </div>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-vertical-bar__section rcx-css-16mbly4"
          >
            <label
              class="rcx-box rcx-box--full rcx-label rcx-box rcx-box--full rcx-box--animated rcx-input-box__wrapper"
            >
              <input
                aria-controls="_r_2q_"
                aria-label="Search_by_username"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--undecorated rcx-input-box--type-text rcx-input-box"
                placeholder="Search_by_username"
                size="1"
                type="text"
                value="filter"
              />
              <span
                class="rcx-box rcx-box--full rcx-input-box__addon"
              >
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-magnifier rcx-icon rcx-css-4pvxx3"
                >
                  
                </i>
              </span>
            </label>
            <div
              class="rcx-box rcx-box--full rcx-css-l1qvi5"
            >
              <div
                class="rcx-box rcx-box--full rcx-css-1mbgoc8"
              >
                <div
                  aria-hidden="true"
                  data-a11y-ignore="aria-hidden-focus"
                  data-react-aria-prevent-focus="true"
                  data-testid="hidden-select-container"
                  style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
                >
                  <label>
                    <select
                      tabindex="-1"
                    >
                      <option />
                      <option
                        value="online"
                      >
                        online
                      </option>
                      <option
                        value="all"
                      >
                        all
                      </option>
                    </select>
                  </label>
                </div>
              </div>
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-labelledby="react-aria-_r_33_"
                class="rcx-box rcx-box--full rcx-select rcx-css-1vw6rc6"
                type="button"
              >
                <span
                  class="rcx-box rcx-box--full rcx-css-e3nij6"
                  id="react-aria-_r_33_"
                >
                  Online
                </span>
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-chevron-down rcx-icon rcx-css-1wz6xj9"
                >
                  
                </i>
              </button>
            </div>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-vertical-bar__content rcx-css-1w66n2o"
          >
            <div
              role="status"
              style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              __count__result_found
            </div>
            <div
              class="rcx-box rcx-box--full rcx-css-nyqak3"
            >
              <span
                class="rcx-box rcx-box--full rcx-css-1848tdm"
              >
                Showing_current_of_total
              </span>
            </div>
            <div
              class="rcx-box rcx-box--full rcx-css-4k230l"
              id="_r_2q_"
            >
              <div>
                <ul
                  aria-label="Members"
                  data-buffer-size="50"
                  data-keep-mounted="0"
                  data-testid="room-members-virtual-list"
                  role="listbox"
                  style="margin: 0px; padding: 0px; list-style: none; height: 100%;"
                >
                  <li
                    role="none"
                    style="list-style: none; z-index: 1; position: sticky; top: 0px;"
                  >
                    <div>
                      <div
                        class="rcx-box rcx-box--full rcx-css-sah935"
                      >
                        <div
                          class="rcx-box rcx-box--full"
                        >
                          Members
                        </div>
                        <div
                          class="rcx-box rcx-box--full"
                        >
                          1
                        </div>
                      </div>
                    </div>
                  </li>
                  <li
                    role="none"
                    style="list-style: none;"
                  >
                    <div>
                      <div
                        aria-disabled="false"
                        aria-selected="false"
                        class="rcx-option"
                        data-invitationdate="2025-01-01T00:00:00Z"
                        data-userid="rocket.cat"
                        data-username="rocket.cat"
                        role="option"
                        style="padding-inline: 24px;"
                      >
                        <div
                          class="rcx-option__wrapper"
                        >
                          <div
                            class="rcx-option__avatar"
                          >
                            <figure
                              class="rcx-box rcx-box--full rcx-avatar rcx-avatar--x28"
                            >
                              <img
                                alt="Avatar"
                                aria-hidden="true"
                                class="rcx-avatar__element rcx-avatar__element--x28"
                                data-username="rocket.cat"
                                src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQYV2Oora39DwAFaQJ3y3rKeAAAAABJRU5ErkJggg=="
                                title="rocket.cat"
                              />
                            </figure>
                          </div>
                          <div
                            class="rcx-option__column"
                          >
                            <svg
                              aria-hidden="true"
                              class="rcx-status-bullet rcx-status-bullet--loading undefined "
                              fill="none"
                              height="12"
                              title="Loading"
                              viewBox="0 0 12 12"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <circle
                                class="rcx-status-bullet rcx-status-bullet--loading"
                                cx="6"
                                cy="6"
                                r="5"
                                stroke-dasharray="2 2"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                          <div
                            class="rcx-option__content"
                            data-qa="MemberItem-rocket.cat"
                          >
                            rocket.cat
                          </div>
                          <div
                            class="rcx-option__column"
                          >
                            <i
                              aria-hidden="false"
                              class="rcx-box rcx-box--full rcx-icon--name-mail rcx-icon rcx-css-1umrcev"
                              role="status"
                              title="Invited__date__"
                            >
                              
                            </i>
                          </div>
                          <div
                            class="rcx-box--animated rcx-option__menu-wrapper"
                          >
                            <button
                              aria-hidden="true"
                              class="rcx-box rcx-box--full rcx-button--tiny-square rcx-button--square rcx-button--icon rcx-button"
                              tabindex="-1"
                              type="button"
                            >
                              <i
                                aria-hidden="true"
                                class="rcx-box rcx-box--full rcx-icon--name-kebab rcx-icon rcx-css-1g87xs3"
                              >
                                
                              </i>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            style="position: absolute; user-select: none; width: 100%; height: 10px; top: -5px; left: 0px; cursor: row-resize;"
          />
          <div
            style="position: absolute; user-select: none; width: 10px; height: 100%; top: 0px; cursor: col-resize; right: -5px;"
          />
          <div
            style="position: absolute; user-select: none; width: 100%; height: 10px; left: 0px; cursor: row-resize; bottom: -5px;"
          />
          <div
            style="position: absolute; user-select: none; width: 3px; height: 100%; top: 0px; left: 0px; cursor: col-resize; z-index: 99;"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-r98g7d"
            />
          </div>
          <div
            style="position: absolute; user-select: none; width: 20px; height: 20px; z-index: 1; right: -10px; top: -10px; cursor: ne-resize;"
          />
          <div
            style="position: absolute; user-select: none; width: 20px; height: 20px; z-index: 1; right: -10px; bottom: -10px; cursor: se-resize;"
          />
          <div
            style="position: absolute; user-select: none; width: 20px; height: 20px; z-index: 1; left: -10px; bottom: -10px; cursor: sw-resize;"
          />
          <div
            style="position: absolute; user-select: none; width: 20px; height: 20px; z-index: 1; left: -10px; top: -10px; cursor: nw-resize;"
          />
        </div>
      </div>
      <span
        data-focus-scope-end="true"
        hidden=""
      />
    </div>
  </div>
</body>
`;
